--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/silvia/Documents/GitHub/EjerciciosRepaso/acm.jar"/>
+	<classpathentry kind="lib" path="E:/DAM/Programación Jorge Cisneros/acm.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
